<resources>
    <string name="app_name">GPA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">Or</string>
    <string name="subject_count">Subject count</string>
    <string name="_1_subject_score">1. Subject score:</string>
    <string name="k1_star">k1*:</string>
    <string name="k1">k1:</string>
    <string name="_2_subject_score">2. Subject score:</string>
    <string name="k2_star">k2*:</string>
    <string name="k2">k2:</string>
    <string name="_3_subject_score">3. Subject score:</string>
    <string name="k3_star">k3*:</string>
    <string name="k3">k3:</string>
    <string name="_4_subject_score">4. Subject score:</string>
    <string name="k4_star">k4*:</string>
    <string name="k4">k4:</string>
    <string name="_5_subject_score">5. Subject score:</string>
    <string name="k5_star">k5*:</string>
    <string name="k5">k5:</string>
    <string name="_6_subject_score">6. Subject score:</string>
    <string name="k6_star">k6*:</string>
    <string name="k6">k6:</string>
    <string name="_7_subject_score">7. Subject score:</string>
    <string name="k7_star">k7*:</string>
    <string name="k7">k7:</string>
    <string name="good_luck">Good Luck</string>
    <string name="_0">0</string>
    <string name="compute">Compute</string>
    <string name="gpa">GPA:</string>
    <string name="information">Information</string>
    <string name="subject_scores_are_student_s_score_in_subjects">Subject scores are student\'s score in subjects</string>
    <string name="k1_k2_kn_are_credits_earned_in_subjects">k1*, k2*,..kn* are credits earned in subjects</string>
    <string name="k1_k2_kn_are_corresponding_credits_provided_in_the_curriculum_for_the_subjects">k1, k2,..,kn are corresponding credits provided in the curriculum for the subjects</string>
    <string name="textview">TextView</string>
    <string name="sign_up">Sign Up</string>
    <string name="as_guest">As Guest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next"><![CDATA[Next >>]]></string>


    <string-array name="count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>