<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/welcomeAnimation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_598"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/welcome">

    </com.airbnb.lottie.LottieAnimationView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/bitter_sweet"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeAnimation" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/or"
        android:textColor="@color/bitter_sweet"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toStartOf="@+id/asGuestButton"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/welcomeAnimation" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/asGuestButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_32"
        android:text="@string/as_guest"
        android:fontFamily="@font/manrope_semibold"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/bitter_sweet"
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeAnimation" />
</androidx.constraintlayout.widget.ConstraintLayout>