<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.WelcomeFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/welcomeAnimation"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchMode"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/welcome">

    </com.airbnb.lottie.LottieAnimationView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:background="@drawable/round_button"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeAnimation" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/or"
        android:textColor="@color/or_color"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toStartOf="@+id/asGuestButton"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/welcomeAnimation" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/asGuestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_32"
        android:background="@drawable/round_button"
        android:fontFamily="@font/manrope_semibold"
        android:padding="10dp"
        android:text="@string/as_guest"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeAnimation" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:thumb="@drawable/thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:track="@drawable/track" />

</androidx.constraintlayout.widget.ConstraintLayout>