<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SignUpFragment">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@drawable/sign_up_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_16"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/sign_up"
                android:textColor="@color/sign_up_color"
                android:textSize="@dimen/sp_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_32"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/username"
                android:textColor="@color/sign_up_color"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/username_icon"
                android:drawablePadding="@dimen/dp_6"
                android:ems="10"
                android:inputType="text"
                android:outlineProvider="background"
                android:paddingStart="@dimen/dp_8"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />


            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_32"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/password"
                android:textColor="@color/sign_up_color"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

            <com.rubabe.gpa.custom.CustomEditText
                android:id="@+id/customEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="@dimen/dp_6"
                android:ems="10"
                android:inputType="text"
                android:outlineProvider="background"
                android:paddingStart="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_32"
                android:background="@drawable/sign_up_button_background"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>